objects/agf__QA_Test_Execution__c.object
<CustomObject>
    <description>QAForce2 Test Execution Object
Execution of a test case under a particular scenario, i.e., targeted release, build number</description>
    <fields>
        <fullName>agf__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00ND0000001rflFMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Bugs__c</fullName>
        <description>Comma separated list of bugs associated to this test execution</description>
        <inlineHelpText>Comma separated list of bugs associated to this test execution</inlineHelpText>
        <label>Bugs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Build_of_Last_Execution__c</fullName>
        <label>Build # of Last Execution</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Date_of_Last_Execution__c</fullName>
        <description>Populate this field when you complete execution for this test case.</description>
        <label>Date of Last Execution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Ftest_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Ftest Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Number_of_Executions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Executions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <description>planned: the test will be executed some point in the future
in progress: test has started, result is not ready yet
passed: test executed and passed
failed: test executed and failed
blocked: test execution cannot progress until obstacles are removed</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Test_Case__c</fullName>
        <description>Specifies the parent Test Case object.</description>
        <label>Test Case</label>
        <referenceTo>agf__QA_Test_Case__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <description>Specifies the execution type.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ftest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silktest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI - script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selenium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProdTest - Selenium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProdTest - API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProdTest - Extended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Test Executions (User Story)</relationshipLabel>
        <relationshipName>TestExecutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Execution</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Test_Case__c</columns>
        <columns>agf__User_Story__c</columns>
        <columns>agf__Assignee__c</columns>
        <columns>agf__Status__c</columns>
        <columns>agf__Type__c</columns>
        <columns>agf__Bugs__c</columns>
        <columns>agf__Date_of_Last_Execution__c</columns>
        <columns>agf__Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MM}{DD}{YY} - {0}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Assignee_cannot_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Assignee__c )</errorConditionFormula>
        <errorDisplayField>agf__Assignee__c</errorDisplayField>
        <errorMessage>Test Execution Insert|Update Error: Assignee is mandatory to insert|update a test execution record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Correct_status_value</fullName>
        <active>true</active>
        <description>Status has to be: Planned, In progress, Passed, Failed, or Blocked</description>
        <errorConditionFormula>NOT(OR(
   ISPICKVAL(agf__Status__c, &quot;Planned&quot;),
   ISPICKVAL(agf__Status__c, &quot;In Progress&quot;),
   ISPICKVAL(agf__Status__c, &quot;Passed&quot;),
   ISPICKVAL(agf__Status__c, &quot;Failed&quot;),
   ISPICKVAL(agf__Status__c, &quot;Blocked&quot;)))</errorConditionFormula>
        <errorDisplayField>agf__Status__c</errorDisplayField>
        <errorMessage>Status has to be: Planned, In progress, Passed, Failed, or Blocked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Needed_if_Status_is_passed_or_failed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNULL(agf__Date_of_Last_Execution__c ) ,
OR ( ISPICKVAL( agf__Status__c , &quot;Passed&quot;) , ISPICKVAL( agf__Status__c , &quot;Failed&quot;) )
)</errorConditionFormula>
        <errorMessage>Value needed for Date when Executed, since Status is Passed / Failed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Not_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
agf__Number_of_Executions__c  &lt;= 0 ,
OR ( ISPICKVAL( agf__Status__c , &quot;Passed&quot;) , ISPICKVAL( agf__Status__c , &quot;Failed&quot;) )
)</errorConditionFormula>
        <errorDisplayField>agf__Number_of_Executions__c</errorDisplayField>
        <errorMessage>Number of Executions has to be &gt;= 1 for Passed or Failed status and &gt;= 0 for others!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Type_Must_Be_Valid</fullName>
        <active>false</active>
        <description>Users should use a valid picklist value</description>
        <errorConditionFormula>CASE(  agf__Type__c  ,
&quot;Manual&quot;, 1,
&quot;Ftest&quot;, 1,
&quot;Silktest&quot;, 1,
&quot;Utest&quot;, 1,
&quot;.Net&quot;, 1,
&quot;CTI - script&quot;, 1,
&quot;Client Automation&quot;, 1,
&quot;Selenium&quot;, 1,
&quot;Systest&quot;, 1,
&quot;ProdTest - Selenium&quot;, 1,
&quot;ProdTest - API&quot;, 1,
&quot;ProdTest - Extended&quot;, 1,
0) = 0</errorConditionFormula>
        <errorDisplayField>agf__Type__c</errorDisplayField>
        <errorMessage>Incorrect Type Value. Must be picked from the list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__User_story_cannot_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__User_Story__c )</errorConditionFormula>
        <errorDisplayField>agf__User_Story__c</errorDisplayField>
        <errorMessage>Test Execution Insert|Update Error: User Story is mandatory to insert|update a test execution record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__dateCheck</fullName>
        <active>true</active>
        <description>Check for date in the Date of Last Execution. If it is set to future date then prompt an error message to reset the date which is less than current date.</description>
        <errorConditionFormula>AND(agf__Date_of_Last_Execution__c   &gt;  NOW(),  NOT( ISBLANK( agf__Date_of_Last_Execution__c ) ) )</errorConditionFormula>
        <errorDisplayField>agf__Date_of_Last_Execution__c</errorDisplayField>
        <errorMessage>Date of Last Execution should be less than the current date!</errorMessage>
    </validationRules>
</CustomObject>